--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "serve": "react-scripts start",
+    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd client && yarn && yarn run build"
   },
   "eslintConfig": {
     "extends": "react-app"
